# pybullet_robots

./: ANYmal.py  README.md  _config.yml  atlas.py  batchsim3.py  batchsim3_grasp.py  baxter_ik_demo.py  botlab.py  cassie.py  config.py  dobot.py  empty_demo.py  env.py  f10_racecar.py  index.html  inverse_kinematics_sawyer.py  kuka_demo.py  laikago.py  loadpanda.py  loadpanda_grasp.py  minitaur.py  minitaur_demo.py  model.py  panda_sim_grasp.py  pendulum_demo.py  racecar.py  train.py  turtlebot.py  vision60_playback.py  vr_botlab.py
botlab/: 0_VRDemoSettings.txt  botlab.sdf
corl_demo/: kuka_demo.py  minitaur.py
data/: boston_box.mtl  boston_box.urdf  plane.urdf  pr2_gripper2.urdf  turtlebot.urdf
data/ANYmal/: anymal_optoforce.dae  anymal_shank_2_LF.dae  anymal_shank_2_LH.dae  anymal_shank_2_RF.dae  anymal_shank_2_RH.dae  anymal_thigh.dae  robot.urdf
data/baxter_common/: LICENSE
data/botlab/: botlab.sdf  materials.mtl  processObj.bat  splitobj.py
data/cassie/: README.md
data/cassie/meshes/: CassieTorso_Mount.STL  abduction.stl  abduction_mirror.stl  achilles-rod.stl  hip.stl  hip_mirror.stl  knee-output.stl  knee-output_mirror.stl  pelvis.stl  plantar-rod.stl  shin-bone.stl  shin-bone_mirror.stl  tarsus.stl  tarsus_mirror.stl  thigh.stl  (+6 more)
data/dobot/: dobot.urdf
data/franka_panda/: panda.urdf
data/laikago/: laikago.urdf  license.txt
data/sawyer_robot/: LICENSE  package.xml
data/sawyer_robot/sawyer_description/urdf/: sawyer.urdf
hardware/rplidar/: readme.txt  rplidar_pybullet.py
update2/: kuka_demo.py  minitaur.py  minitaur_demo.py  vr_botlab.py
(+33 files in other folders)
